# binrc

./: .gitignore  CMakeLists.txt  README.md  main.cu  nrc.json
scenes/: LICENSE  ajar_thinker.glb  caustics_big.glb  caustics_cubes.glb  caustics_small.glb  diffuse.glb  thinker.glb
src/: brdf.cuh  brdf.hpp  brdflut.cu  brdflut.cuh  cudaglm.cuh  cudaglm.hpp  cudamath.cuh  cudamathtypes.cuh  cudautil.hpp  main.cpp  main.cu  mainapp.cpp  mainapp.cu  mainapp.cuh  mainapp.hpp  optixparams.cuh  optixparams.hpp  optixpathtracer.cu  optixrenderer.cpp  optixrenderer.cu  optixrenderer.cuh  optixrenderer.hpp  sampling.cuh  scene.cpp  scene.hpp  test.cuh
src/optix/: balancing.cu  combined.cu  common.cuh  hit.cu  inference.cu  nrc.cuh  params.cuh  payload.cuh  principled_brdf.cuh  prinicpled_brdf_types.cuh  reference.cu  sampling.cuh  spatial_hash.cuh  sppm_as.cuh  sppm_eye_pass.cu  sppm_light_pass.cu  sppm_rtx.cu  sppm_rtx.cuh  train_backward.cu  train_bidir.cu  train_eye.cu  train_forward.cu  train_light.cu  train_light_naive.cu
tests/: Makefile  caustic_small_reference.json  cornell_reference.json
tests/batch_size/: 1+nrc+pt+14.json  1+nrc+pt+14@4.json  1+nrc+pt+16.json  1+nrc+pt+16@4.json  100+nrc+pt+14.json  100+nrc+pt+14@4.json  100+nrc+pt+16.json  100+nrc+pt+16@4.json  25+nrc+pt+14.json  25+nrc+pt+14@4.json  25+nrc+pt+16.json  25+nrc+pt+16@4.json  2500+nrc+pt+14.json  2500+nrc+pt+14@4.json  2500+nrc+pt+16.json  2500+nrc+pt+16@4.json  5+nrc+pt+14.json  5+nrc+pt+14@4.json  5+nrc+pt+16.json  5+nrc+pt+16@4.json  500+nrc+pt+14.json  500+nrc+pt+14@4.json  500+nrc+pt+16.json  500+nrc+pt+16@4.json  nrc+pt+14.json  nrc+pt+14@4  nrc+pt+16.json  nrc+pt+16@4.json
tests/encodings/: nrc+ptMHE+OB+10s.json  nrc+ptMHE+OB.json  nrc+ptMHE+OBD+10s.json  nrc+ptMHE+OBD.json  nrc+ptMHE.json  nrc+ptOBD.json.disabled  nrc+ptSPH.json.disabled  nrc+ptTWE.json
tests/jit/: nrc+pt+JIT.json  nrc+pt+fullJIT.json  nrc+pt.json
tests/path_termination/: 1stdiff+nee.json  1stdiff.json  1stvert+nee.json  1stvert.json  bth+nee.json  bth.json  bthk9+nee.json  bthk9.json  rawcache.json  ref.json  sah+nee.json  sah.json
tests/performance_comparison/: nrc+bt.json  nrc+lt.json  nrc+pt+sl.json  nrc+pt.json  nrc+sppc.json  pt.json  sppm.json
tests/performance_resolution/: linearresseq.py  nrc+pt.json  nrc+sppc.json  pt.json
tests/photon_optimization/: SER+Reject70+RejectN.json  noAH.json  ref.json
tests/photon_otimization/: SER+Reject70.json  base.json
tests/presentation/: ltdirect.json  naivedirect.json  nee.json  pt.json  ptdirect.json
tests/quality_comparison/: nrc+bt.json  nrc+lt+bal.json  nrc+lt+bal4.json  nrc+lt+balcam.json  nrc+lt.json  nrc+naive+bal.json  nrc+naive+bal4.json  nrc+naive+balcam.json  nrc+naive.json  nrc+pt+sl.json  nrc+pt.json  nrc+sppc+Rej70+RejN.json  nrc+sppc+Rej70.json  nrc+sppc.json  nrc+sppc14@1.json  nrc+sppc14@4.json  nrc+sppc16@1.json  nrc+sppc16@4.json  pt.json  refpt.json  refsppm.json  sppm.json
tests/train_time/: nrc+sppc1.json  nrc+sppc10.json  nrc+sppc100.json  nrc+sppc1000.json  nrc+sppc10000.json  nrc+sppc25.json  nrc+sppc5.json  nrc+sppc50.json
